2000-04-11  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-open): Use add-hook instead of setq.

	* toc.el (toc-handle-opened, toc-handle-closed,
 	toc-handle-receive): Use toc-run-hooks instead of apply.
	(toc-run-hooks): Added.  Using this allows multiple "subscribers"
	to the various toc "events".
	(toc-run-hooks): Use mapcar not mapc.  Creates more garbage, but
	Emacs doesn't have mapc.

	* tnt.el (tnt-shutdown): Changed name from tnt-buddy-shutdown as
	it has become a catchall for all shutdown realted stuff.  tnt-kill 
	and tnt-handle-close had some duplicated code that I put here
	because, inevitably, someone would put some shutdown stuff in one
	but not the other.
	(tnt-repeat): Added.  Sets up a repeating timer in a way that
	XEmacs (and Emacs) likes.  Made it its own function because
	interval has to be the first and second arg to run-at-time, which
	looks ugly.
	(tnt-buggy-idle): Added a variable tnt-buggy-idle which helps
	control whether we do idle handling.  It defaults to t so we do
	not do idle handling.  It should be some sort of complicated test
	to see if the bug exists.  For now, to override it, you must set
	it to nil *before* loading tnt.el since it controls the default
	setting of a later variable.
	(tnt-im-mode): Use syntax-table and abbrev-table from text-mode.
	(tnt-chat-mode): Use syntax-table and abbrev-table from text-mode.
	(tnt-buddy-list-mode): Use syntax-table from text-mode.
	(tnt-buddy-edit-mode): Use syntax-table from text-mode.
	(tnt-blist-to-buffer): Eliminated.  It was called in only one
	place, and when called in that place most of the code was
	superfluous.

2000-04-10  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-closed): now checking whether unidle-timer
	exists before canceling it, rather than when idle-timer exists.
	(tnt-handle-sign-on): uncommented out the unidle-timer.
	use-idle-timer is still defaulting to nil, so this doesn't really
	need to be commented out.